<resources>
    <string name="app_name">Tamara</string>
    <string name="back">Keluar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="halo">Halo, </string>
    <string name="masukkan_akun">Masukkan Akun Anda</string>
    <string name="tidak_punya_akun">Belum punya akun? <font color="#006C4E">Daftar akun.</font></string>
    <string name="email">user@email.com</string>
    <string name="password">Kata Sandi</string>
    <string name="nama">Nama</string>
    <string name="login">MASUK</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="punya_akun">Sudah punya akun? <font color="#006C4E">Masuk sini.</font></string>
    <string name="daftar">DAFTAR</string>
    <string name="tamara">Tamara</string>
    <string name="harus_diisi">Harus diisi</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="panjang_password">Kata sandi harus 8 karakter atau lebih</string>
    <string name="panjang_nama">Nama harus 3 karakter atau lebih</string>
    <string name="invalid_form">Isi form dengan benar</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_community">Komunitas</string>
    <string name="title_profile">Profil</string>
    <string name="cuaca">Cuaca</string>
    <string name="alamat">Alamat</string>
    <string name="derajatdetail">\u2103elcius</string>
    <string name="saran_kegiatan">Saran Kegiatan</string>
    <string name="scan_tanaman">Scan Tanaman</string>
    <string name="scan">Scan</string>
    <string name="takepicture">Ambil Foto</string>
    <string name="analisis">Analisis Produktivitas</string>
    <string name="analisisnow">Analisis Sekarang</string>
    <string name="alamatdetail">Kecamatan Medan Kota, 15 Juni 2023</string>
    <string name="saran_kegiatandetail">Hujan di pagi hari, berawan di sore hari. Kemungkinan, hari ini <b>buruk untuk pemberian pestisida</b> </string>
    <string name="ramalan">Ramalan 3 Hari</string>
    <string name="hari">Selasa</string>
    <string name="nama_tanaman">Malformasi Mangga</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="detail">Detail</string>
    <string name="title_hasilanalisis">Hasil Analisis</string>
    <string name="title_karakteristik">Karakteristik</string>
    <string name="hasilanalisis">\u2022 Perkembangan yang tidak normal pada daun, tunas, dan bunga. <br /> \n\u2022 Penampilan yang rimbun. <br /> \n\u2022 Pertumbuhan yang terhambat. <br />\n\u2022 Gangguan tersebar luas pada bunga dan tunas vegetatif.</string>
    <string name="karaktersitk">\u2022 Tumbuhan berwarna hijau tua. <br /> \n\u2022 Daun keras. <br /> \n\u2022 Warna bunga cerah. <br />\n\u2022 Buah berbentuk sempurna, warna buah bagus..</string>
    <string name="penjelasanalisis">Penyakit ini disebabkan oleh spesies jamur Fusarium mangiferae. Malformasi vegetatif umumnya ditemukan pada bibit muda. Bibit menghasilkan pucuk kecil dengan daun bersisik kecil, membuatnya tampak seperti tandan di pucuk pucuk. Bibit tetap kerdil dan akhirnya mati. Variasi malai dapat dilihat pada malformasi perbungaan.</string>
    <string name="user">User</string>
    <string name="satu">1</string>
    <string name="sat_waktu"> Jam</string>
    <string name="dot">•</string>
    <string name="judul_pertanyaan">Ini adalah judul pertanyaan.</string>
    <string name="pertanyaan">Ini adalah pertanyaan.</string>
    <string name="komunitas">Komunitas</string>
    <string name="jawaban"> Jawaban</string>
    <string name="keluar">Keluar</string>
    <string name="tanya_komunitas">Tanya Komunitas</string>
    <string name="pilih_kategori_tanaman">Pilih Kategori Tanaman</string>
    <string name="judul_pertanyaan_new">Judul Pertanyaan</string>
    <string name="hint_edit_text_judulpertanyaan">Tulis pertanyaan disini yang menunjukkan apa yang terjadi dengan tanaman Anda</string>
    <string name="maks_200_karakter">Maks. 200 karakter</string>
    <string name="deskripsi_permasalahan">Deskripsi Permasalahan</string>
    <string name="maks_2000_karakter">Maks. 2000 karakter</string>
    <string name="hint_edit_text_deskripsipertanyaan">Jelaskan permasalahan pada tanaman secara detail disini seperti perubahan pada daun, dan lain-lain</string>
    <string name="kirim">Kirim</string>
    <string name="ini_adalah_jawaban">Ini adalah jawaban</string>
    <string name="title_saranpengendalian">Saran Pengendalian</string>
    <string name="alamat_dummy">Kecamatan Medan Kota</string>
    <string name="hasilsaran">Kami merekomendasikan mengikuti kontrol organik metode pada tahap awal penyakit atau ketika tanaman mendekati panen. Pada stadium penyakit yang lebih lanjut, harap ikuti langkah-langkah pengendalian kimiawi. Mencampur atau menerapkan produk yang berbeda pada saat yang sama waktu tidak dianjurkan.</string>
    <string name="title_pengendalianorganik">Pengendalian Organik</string>
    <string name="pengendalianorganik">Gunakan ekstrak daun Datura stramonium (Alkaloid), Calotropis gigantea dan pohon Mimba (Azadirachtin) untuk mengurangi infeksi.</string>
    <string name="title_pengendaliankimia">Pengendalian Kimia</string>
    <string name="pengendaliankimia">Selalu pertimbangkan pendekatan terpadu dengan tindakan pencegahan bersama dengan perawatan biologis, jika tersedia. </string>
    <string name="hasilscan">Hasil Scan</string>
    <string name="info">Silahkan cek dari kemungkinan yang di bawah ini yang cocok dengan keadaan tanaman Anda</string>
    <string name="tanggal_dummy">15 Juni 2023</string>
    <string name="comma">, </string>
    <string name="derajat_celcius">\u2103</string>
    <string name="derajat">\u00B0</string>
    <string name="temperature_dummy">30</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="community">Segera launching fitur komunitas</string>

    <string name="daftar_berhasil">Pendaftaran berhasil</string>
    <string name="tv_saran_kegiatan">Baik untuk memberi pupuk pada tanaman.</string>
    <string name="galeri">GALERI</string>
    <string name="kamera">KAMERA</string>
    <string name="proses">PROSES</string>

    <string name="tidak_mendapatkan_akses_kamera">Tidak mendapat akses kamera</string>
    <string name="analisis_produktifitas">Analisis Produktifitas</string>
    <string name="keterangan_no_analisis">Waduh, sepertinya kamu belum mengisi data untuk kami analisis.</string>
    <string name="isi_data">Isi Data</string>
    <string name="form_analisis">Form Analisis</string>
    <string name="tanaman">Tanaman</string>
    <string name="luas_lahan_m2">Luas Lahan (m<sup><small>2</small></sup>)</string>
    <string name="hasil_1x_panen_kg">Hasil 1x Panen (Kg)</string>
    <string name="kali_panen_dalam_setahun">Berapa Kali Panen Dalam Setahun?</string>
    <string name="harga_pasaran_saat_ini">Harga Pasaran Saat Ini (Rp/ Kg)</string>
    <string name="biaya_operasional_pertahun">Biaya Operasional Pertahun</string>
    <string name="sewa_lahan">Biaya Sewa Lahan atau Media Tanam</string>
    <string name="_10000">10000</string>
    <string name="_100_kg">100 Kg</string>
    <string name="_4">4</string>
    <string name="_15000">15000</string>
    <string name="_4000000">4000000</string>
    <string name="bibit">Biaya Bibit</string>
    <string name="_200000">200000</string>
    <string name="biaya_peralatan_pertanian">Biaya Peralatan Pertanian</string>
    <string name="biaya_peralatan_tambahan">Biaya Peralatan Tambahan</string>
    <string name="biaya_pemupukan">Biaya Pemupukan</string>
    <string name="obat_tanaman">Biaya Obat Tanaman</string>
    <string name="biaya_transportasi">Biaya Transportasi</string>
    <string name="biaya_kemasan_hasil_panen">Biaya Kemasan Hasil Panen</string>
    <string name="upah_pekerja">Upah Pekerja</string>
    <string name="biaya_lain_lain">Biaya Lain-Lain</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="hint_form_analisis">Silahkan isi form berikut. Bila tidak ada isi, isi dengan angka 0</string>
    <string name="hasil_analisis_pertahun">Hasil Analisis Pertahun</string>
    <string name="_8">8</string>
    <string name="kg_ha">Kg/ Ha</string>
    <string name="jumlah_panen">Jumlah Panen</string>
    <string name="produktifitas">Produktifitas</string>
    <string name="_800">800</string>
    <string name="kg">Kg</string>
    <string name="total_biaya_produksi">Total Biaya Produksi</string>
    <string name="rp">Rp</string>
    <string name="_210000">210000</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="_400000">400000</string>
    <string name="keuntungan">Keuntungan</string>
    <string name="perbarui_data">Perbarui Data</string>
    <string name="val_cuaca">Cerah</string>
    <string name="_30">30</string>
    <string name="_28">28</string>
    <string name="_32">32</string>
    <string name="_25">25</string>
    <string name="_18_juni_2023">18 Juni 2023</string>
    <string name="_17_juni_2023">17 Juni 2023</string>
    <string name="_16_juni_2023">16 Juni 2023</string>
    <string name="imgplant">imgPlant</string>
    <string name="tani_maju_sejahtera">Tani Maju Sejahtera</string>
    <string name="ramalan_cuaca_3_hari">Ramalan Cuaca 3 Hari</string>
    <string name="_31">31</string>
    <string name="pemberian_pupuk_tidak_disarankan">Pemberian pupuk tidak disarankan</string>
    <string name="hujan">Hujan</string>

    <string-array name="plants_array">
        <item>Singkong</item>
        <item>Cabai</item>
        <item>Jagung</item>
        <item>Jambu</item>
        <item>Mangga</item>
        <item>Kentang</item>
        <item>Teh</item>
        <item>Tomat</item>
        <item>Beras</item>
    </string-array>

</resources>