<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo_profil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/user"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_photo_profil"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout_waktu_tanaman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/iv_photo_profil"
            app:layout_constraintTop_toBottomOf="@id/username">

            <TextView
                android:id="@+id/waktu_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satu"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/satuan_waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat_waktu"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/dot"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_nama_tanaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_tanaman"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_photo_tanaman"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"
            app:layout_constraintTop_toBottomOf="@id/iv_photo_profil"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_judul_pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppinssemibold"
            android:maxLines="2"
            android:text="@string/judul_pertanyaan"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/iv_photo_tanaman" />

        <TextView
            android:id="@+id/tv_pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppinsregular"
            android:maxLines="4"
            android:text="@string/pertanyaan"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_judul_pertanyaan" />

        <LinearLayout
            android:id="@+id/linear_layout_jumlah_jawaban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pertanyaan"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_val_jumlah_jawaban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satu"
                android:textSize="12sp"
                android:fontFamily="@font/poppinsregular"/>
            <TextView
                android:id="@+id/tv_jumlah_jawaban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jawaban"
                android:textSize="12sp"
                android:fontFamily="@font/poppinsregular"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>